--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body{
      font-family: 'Arial';
       background: lightskyblue;
       color: darkblue;
+      background-image: https://www.lifeinthefingerlakes.com/wp-content/uploads/2019/10/finger-lakes-sunset-690x394.jpg";>
 }
 img {
     width: 200px;
